# add-srt-next-to-videos

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
add_srt_next_to_videos/: cli.py  core.py
