[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "add-srt-next-to-videos"
version = "0.1.0"
description = "Generate .srt subtitle files next to video files using local MLX Whisper and LLM translation"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Yang"}]
readme = "README.md"
keywords = ["whisper", "subtitles", "srt", "mlx", "transcription", "translation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "mlx-whisper>=0.4",
    "python-dotenv>=1.0",
    "requests>=2.20",
]

[project.urls]
Homepage = "https://github.com/yuyangchee98/add-srt-next-to-videos"
Source = "https://github.com/yuyangchee98/add-srt-next-to-videos"

[tool.setuptools.packages.find]
include = ["add_srt_next_to_videos*"]

[project.scripts]
add-srt-next-to-videos = "add_srt_next_to_videos.cli:main"
